# adasockets

./: .gitignore  .hgtags  .travis.yml  AUTHORS.md  ChangeLog  GMGPL  INSTALL  INSTALL.md  MANIFEST  Makefile.VMS  Makefile.am  NEWS  README  README-RTEMS.md  README.RTEMS  README.md  configure.ac
contrib/vms/: README  sockets-constants.ads
contrib/win32/: Readme.txt  distr
contrib/win32/adasockets/: Readme.txt  build.bat  clean.bat
doc/: Makefile.am  adadoc.tpl  adasockets.texi  sockets-multicast.desc  sockets-naming.desc  sockets.desc
examples/: Makefile.RTEMS  Makefile.VMS  Makefile.am  header.txt  listener.adb  multi.adb  rtems_init.c  rtems_networkconfig.h  stream_listener.adb  stream_sender.adb  tcprelay.adb  value.adb
man/: Makefile.am  adasockets-config.1
rtems/: ChangeLog  Makefile.RTEMS  README  create_constants_c.sh  rtems_main.c  sockets-constants-rtems.ads
src/: Makefile.RTEMS  Makefile.VMS  Makefile.am  adasockets-config  adasockets.gpr.in  adasockets.pc.in  config.h.in  constants.c  constants.sh  header.txt  sockets-constants.ads  sockets-link.ads.in  sockets-link.ads.vms  sockets-multicast.adb  sockets-multicast.ads  sockets-naming.adb  sockets-naming.ads  sockets-stream_io.adb  sockets-stream_io.ads  sockets-thin.adb.vms  sockets-thin.adb.win32  sockets-thin.ads.unix  sockets-thin.ads.vms  sockets-thin.ads.win32  sockets-types.ads.in  sockets-utils.adb  sockets-utils.ads  sockets-vms_link.ads  sockets-windows_link.adb  sockets-windows_link.ads  sockets.adb  sockets.ads  split.adb
support/: adacompiler  adacompiler.in  test-build.sh
tests/: Makefile.am  multicast_test.adb  value-compressed.test  value-invalid.test  value-localhost.test  value-regular.test  value.adb
utils/: make_distrib  update-headers.el
vms/: Makefile.VMS  constants.c_pre  constants.list  create_constants_ads.com  create_constants_c.com
